# Drift-Shield

./: .gitignore  Dockerfile  README.md  compose.yml  config.yaml  dev.sh  pyproject.toml  requirements.txt
frontend_new/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend_new/src/: App.jsx  index.css  main.jsx
frontend_new/src/api/: client.js  prometheusClient.js
frontend_new/src/components/: AboutTab.jsx  AnimatedNumber.jsx  ErrorBoundary.jsx  GrafanaPanel.jsx  LogsTab.jsx  OperationsTab.jsx  OverviewTab.jsx  SystemStatusTab.jsx  TestPanel.jsx  TestPanel.test.jsx  ToastProvider.jsx  shared.jsx
frontend_new/src/components/ui/: badge.jsx  button.jsx  card.jsx  dialog.jsx  scroll-area.jsx  separator.jsx  sheet.jsx  tabs.jsx  tooltip.jsx
frontend_new/src/hooks/: usePrometheusMetrics.js
monitoring/grafana/dashboards/: drift_shield_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: bootstrap_demo.py  eval.py  ieee_adapter.py  promote.py  seed_metrics.py  setup.py  simulate_drift.py  traffic_loop.py  watcher.py
src/fraud_service/api/: constants.py  decisions.py  main.py  schemas.py
src/fraud_service/drift/: constants.py  detector.py  emitter.py  reference.py  request_store.py  retrain.py
src/fraud_service/modeling/: heuristic.py  predict.py  registry.py  train.py
src/fraud_service/monitoring/: metrics.py
src/fraud_service/uncertainty/: conformal.py
src/fraud_service/utils/: config_validator.py  io.py
